GNOME Bugzilla – Bug 773148
Fix Ctrl+F10 keyboard shortcut to open background context menu in list view
Last modified: 2016-10-18 11:19:33 UTC
Out of https://bugzilla.gnome.org/show_bug.cgi?id=773120 Ernestas noticed that this accelerator does not work in list view. It should be implemented in order to mirror the shortcuts available in canvas view. See also this old one: https://bugzilla.gnome.org/show_bug.cgi?id=385896
Same as for the canvas view in bug 773120: (nautilus:1046): Gtk-CRITICAL **: gtk_menu_popup_at_rect: assertion 'GDK_IS_WINDOW (rect_window)' failed Thread 1 "nautilus" received signal SIGTRAP, Trace/breakpoint trap. 0x00007ffff3e38241 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0 (gdb) bt
+ Trace 236749
Created attachment 337933 [details] [review] list-view: fix opening background menu by keyboard > This was broken by commit 1f57c5b19c099ae44b2c8ec8ca9a1904f1ed7885. > When the keyboard was used to pop up this menu, a zero-initialised > GdkEventButton was passed to gtk_menu_popup_at_pointer, which led to > this warning: > > Gtk-CRITICAL **: gtk_menu_popup_at_rect: assertion 'GDK_IS_WINDOW > (rect_window)' failed" > > As suggested by Ernestas Kulik, we can fix this by passing a NULL event > pointer instead, which leads to the GtkMenu function falling back to the > current cursor position anyway, and the menu opens OK at that location.
Review of attachment 337933 [details] [review]: LGTM, thanks!
Attachment 337933 [details] pushed as d75c0f9 - list-view: fix opening background menu by keyboard