list-view: fix opening background menu by keyboard

This was broken by commit 1f57c5b19c099ae44b2c8ec8ca9a1904f1ed7885.
When the keyboard was used to pop up this menu, a zero-initialised
GdkEventButton was passed to gtk_menu_popup_at_pointer, which led to
this warning:

Gtk-CRITICAL **: gtk_menu_popup_at_rect: assertion 'GDK_IS_WINDOW
(rect_window)' failed"

As suggested by Ernestas Kulik, we can fix this by passing a NULL event
pointer instead, which leads to the GtkMenu function falling back to the
current cursor position anyway, and the menu opens OK at that location.

https://bugzilla.gnome.org/show_bug.cgi?id=773148